--- a/package.json
+++ b/package.json
@@ -9,9 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.2",
+    "@mui/material": "^5.8.2",
+    "@zeit/next-sass": "^1.0.1",
+    "axios": "^0.27.2",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.1.6",
+    "next-auth": "^4.3.4",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "sass": "^1.52.2",
+    "styled-components": "^5.3.5",
+    "typescript-cookie": "^1.0.4"
   },
   "devDependencies": {
     "@types/node": "17.0.31",
