--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@automapper/classes": "^8.5.1",
+    "@automapper/core": "^8.5.1",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.2",
@@ -21,6 +23,7 @@
     "next-auth": "^4.3.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "reflect-metadata": "^0.1.13",
     "sass": "^1.52.2",
     "styled-components": "^5.3.5",
     "typescript-cookie": "^1.0.4"
