--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "jsonwebtoken": "^8.5.1",
     "next": "12.1.6",
     "next-auth": "^4.3.4",
+    "next-translate": "^1.6.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "recoil": "^0.7.5",
     "reflect-metadata": "^0.1.13",
     "sass": "^1.52.2",
     "styled-components": "^5.3.5",
